Add Three.js code-based 3D model generation (No Blender needed\!)
- backend/scripts/generateCanModels.js: Node.js script using Three.js
  * Generates 3 soda cans programmatically
  * Creates proper geometry: cylinders + rims + caps
  * Applies metallic material with exact RGB colors
  * Exports to binary .glb format automatically

- Updated backend/package.json:
  * Added 'three' dependency (Three.js library)
  * Added 'npm run generate-models' script

- GENERATE_MODELS_QUICK_START.md: Step-by-step guide
  * Install: npm install three
  * Run: npm run generate-models
  * Verify: Check frontend/public/models/

This replaces Blender entirely - much faster and code-based\!
Models are ready for PHASE 5 (Frontend) and PHASE 6 (Three.js viewer)

Time needed: ~1 minute to generate all 3 models\!

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "node --watch server.js",
     "setup-db": "node scripts/setupDatabase.js",
     "setup-db-sqlite": "node scripts/setupDatabaseSQLite.js",
+    "generate-models": "node scripts/generateCanModels.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "sqlite3": "^5.1.7",
-    "stripe": "^20.3.1"
+    "stripe": "^20.3.1",
+    "three": "^r128"
   }
 }
